# videorecorder

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  app.cpp  app.hpp  main.cpp
src/libs/: CMakeLists.txt
src/libs/screenrecorder/: CMakeLists.txt  screen_recorder.cpp  screen_recorder.hpp
src/libs/screenrecorder/encoder/: CMakeLists.txt  frame_encoder.cpp  frame_encoder.hpp
src/libs/screenrecorder/grabber/: CMakeLists.txt  grabber_base.cpp  grabber_base.hpp  screen_grabber.cpp  screen_grabber.hpp
